--- a/templating/pom.xml
+++ b/templating/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mattr.controllerpractice</groupId>
-	<artifactId>controllerpractice</artifactId>
+	<groupId>com.mattr.templating</groupId>
+	<artifactId>templating</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>controllerpractice</name>
-	<description>Demo project for Spring Boot</description>
+	<name>templating</name>
+	<description>Illustrates using templating</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
