Java Deployment edits made for AWS deployment

--- a/projects/pom.xml
+++ b/projects/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.mattr.projects</groupId>
 	<artifactId>projects</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>projects</name>
 	<description>Loofiy Assignment for Coding Dojo Spring</description>
